<resources>
    <string name="app_name">My Application</string>
    <string name="boletim_epidemiologico">Boletim epidemiológico</string>
    <string name="noticias">Notícias</string>
    <string name="outras_doencas_e_sintomas">Outras Doenças e Sintomas</string>
    <string name="contatos_de_sevicos_de_saude">Contatos de seviços\nde saúde</string>
    <string name="dados_epidemiologicos">Dados Epidemiológicos</string>
    <string name="covid_e_sintomas">COVID-19</string>
    <string name="topBar">TODO</string>
    <string name="midLine">TODO</string>
    <string name="h1Line">TODO</string>
    <string name="h2Line">TODO</string>
    <string name="Doencas_e_Sintomas">Doenças e Sintomas</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="numeros">Contatos de Serviços de Saúde</string>

    <string name="menu_covid19">Covid-19</string>
    <string name="menu_raiva">Raiva</string>
    <string name="covid_medidas_preventivas">Covid -19 - Medidas Preventivas</string>
    <string name="hiv_medidas_preventivas">HIV - Medidas Preventivas</string>
    <string name="raiva_medidas_preventivas">Raiva - Medidas Preventivas</string>
    <string name="raiva_sintomas">Raiva - Principais Sintomas</string>
    <string name="hiv_sintomas">HIV - Principais Sintomas</string>
    <string name="covid_sintomas">Covid-19 - Principais Sintomas</string>
    <string name="pre_cadastro_individual">Pré Cadastro Individual</string>

</resources>